@@ -4,6 +4,7 @@ import static io.smallrye.stork.servicediscovery.kubernetes.KubernetesMetadataKe
 import static io.smallrye.stork.servicediscovery.kubernetes.KubernetesMetadataKey.META_K8S_PORT_PROTOCOL;
 import static io.smallrye.stork.servicediscovery.kubernetes.KubernetesMetadataKey.META_K8S_SERVICE_ID;
 
+import java.time.Duration;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.HashMap;
@@ -12,7 +13,9 @@ import java.util.Map;
 import java.util.Optional;
 import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.function.Function;
+import java.util.function.Supplier;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 import org.jboss.logging.Logger;
 
@@ -23,15 +26,15 @@ import io.fabric8.kubernetes.api.model.Endpoints;
 import io.fabric8.kubernetes.api.model.HasMetadata;
 import io.fabric8.kubernetes.api.model.ObjectMeta;
 import io.fabric8.kubernetes.api.model.Pod;
+import io.fabric8.kubernetes.api.model.Service;
+import io.fabric8.kubernetes.api.model.ServicePort;
 import io.fabric8.kubernetes.api.model.discovery.v1.Endpoint;
 import io.fabric8.kubernetes.api.model.discovery.v1.EndpointSlice;
-import io.fabric8.kubernetes.api.model.discovery.v1.EndpointSliceList;
 import io.fabric8.kubernetes.client.Config;
 import io.fabric8.kubernetes.client.ConfigBuilder;
 import io.fabric8.kubernetes.client.KubernetesClient;
 import io.fabric8.kubernetes.client.KubernetesClientBuilder;
 import io.fabric8.kubernetes.client.dsl.AnyNamespaceOperation;
-import io.fabric8.kubernetes.client.dsl.Gettable;
 import io.fabric8.kubernetes.client.dsl.Resource;
 import io.fabric8.kubernetes.client.informers.ResourceEventHandler;
 import io.smallrye.mutiny.Uni;
@@ -64,11 +67,16 @@ public class KubernetesServiceDiscovery extends CachingServiceDiscovery {
     private final String namespace;
     private final boolean secure;
     private final Vertx vertx;
-    private final boolean useEndpointSlices;
+    private final int requestRetryBackoffLimit;
+    private final int requestRetryBackoffInterval;
+    private final Boolean useEndpointSlices;
+    private final Uni<Boolean> useEndpointSlicesEnabledUni;
+    private final boolean useClusterIp;
 
     private static final Logger LOGGER = Logger.getLogger(KubernetesServiceDiscovery.class);
 
     private final AtomicBoolean invalidated = new AtomicBoolean();
+    private final AtomicBoolean informerConfigured = new AtomicBoolean(false);
 
     /**
      * Creates a new KubernetesServiceDiscovery.
@@ -84,9 +92,9 @@ public class KubernetesServiceDiscovery extends CachingServiceDiscovery {
         this.application = config.getApplication() == null ? serviceName : config.getApplication();
         this.namespace = config.getK8sNamespace() == null ? base.getNamespace() : config.getK8sNamespace();
         this.portName = config.getPortName();
-        int requestRetryBackoffInterval = config.getRequestRetryBackoffInterval() == null ? 0
+        this.requestRetryBackoffInterval = config.getRequestRetryBackoffInterval() == null ? 0
                 : Integer.parseInt(config.getRequestRetryBackoffInterval());
-        int requestRetryBackoffLimit = config.getRequestRetryBackoffLimit() == null ? 0
+        this.requestRetryBackoffLimit = config.getRequestRetryBackoffLimit() == null ? 0
                 : Integer.parseInt(config.getRequestRetryBackoffLimit());
 
         allNamespaces = namespace != null && namespace.equalsIgnoreCase("all");
@@ -104,75 +112,94 @@ public class KubernetesServiceDiscovery extends CachingServiceDiscovery {
         this.client = new KubernetesClientBuilder().withConfig(k8sConfig).build();
         this.vertx = vertx;
         this.secure = isSecure(config);
-        this.useEndpointSlices = config.getUseEndpointSlices() == null ? Boolean.FALSE
+        this.useEndpointSlices = config.getUseEndpointSlices() == null ? null
                 : Boolean.valueOf(config.getUseEndpointSlices());
-        if (shouldUseEndpointSlices()) {
-            configureSlicesInformer();
-        } else {
-            configureEndpointsInformer();
+        this.useEndpointSlicesEnabledUni = shouldUseEndpointSlices()
+                .onFailure().retry().withBackOff(Duration.ofMillis(500)).atMost(3)
+                .onFailure()
+                .invoke(th -> LOGGER.warn("Failed to detect EndpointSlice API support, falling back to Endpoints", th))
+                .onFailure().recoverWithItem(false)
+                .memoize().indefinitely();
+        this.useClusterIp = config.getUseClusterIp() != null && Boolean.parseBoolean(config.getUseClusterIp());
+        if (useClusterIp && Boolean.TRUE.equals(useEndpointSlices)) {
+            LOGGER.warnf("Both 'use-cluster-ip' and 'use-endpoint-slices' are enabled for service '%s'. "
+                    + "'use-cluster-ip' takes precedence; 'use-endpoint-slices' will be ignored.", serviceName);
         }
+        // all informers are configured lazily on the first fetchNewServiceInstances call,
+        // to avoid blocking I/O during construction
     }
 
     /**
-     * Returns whether service discovery should use EndpointSlices instead of classic Endpoints.
+     * Asynchronously determines whether service discovery should use EndpointSlices instead of classic Endpoints.
+     * The cluster API groups check runs on a Vert.x worker thread to avoid blocking the event loop.
+     * If {@code use-endpoint-slices=false}, returns {@code false} immediately.
+     * Otherwise, queries the cluster for {@code discovery.k8s.io} support, even when explicitly set to {@code true},
+     * to guard against misconfiguration on clusters that do not expose EndpointSlices.
+     * Retries and fallback on failure are handled by the caller.
      *
-     * <p>
-     * Order of precedence:
-     * </p>
-     * <ol>
-     * <li>User config: if {@code use-endpoint-slices} is explicitly set, that value is used.</li>
-     * <li>If not set, use EndpointSlices only when the API is available and the service has slices.</li>
-     * <li>Otherwise fall back to classic Endpoints.</li>
-     * </ol>
-     *
-     * @return true if EndpointSlices should be used, false otherwise.
+     * @return a {@link Uni} emitting {@code true} if EndpointSlices should be used, {@code false} otherwise.
      */
 
-    private boolean shouldUseEndpointSlices() {
-        boolean shouldUseEndpointSlices = false;
-        if (useEndpointSlices) {
-            shouldUseEndpointSlices = true;
+    private Uni<Boolean> shouldUseEndpointSlices() {
+        if (Boolean.FALSE.equals(useEndpointSlices)) {
+            return Uni.createFrom().item(false);
         }
-        //cluster autodetection: EndpointSlices live in `discovery.k8s.io/v1`
-        boolean apiAvailable = client.getApiGroups().getGroups().stream()
-                .anyMatch(g -> DISCOVERY_K8S_API.equals(g.getName()));
-
-        if (!apiAvailable) {
-            shouldUseEndpointSlices = false; // old cluster - endpoints
-        }
-
-        EndpointSliceList slices = client.discovery().v1().endpointSlices()
-                .inNamespace(namespace)
-                .withLabel(SERVICE_SELECTOR, application)
-                .list();
-        shouldUseEndpointSlices = slices != null && !slices.getItems().isEmpty();
-        if (shouldUseEndpointSlices) {
-            LOGGER.info("EndpointSlice discovery is enabled (experimental)");
-        }
-        return shouldUseEndpointSlices;
+        // cluster autodetection: EndpointSlices live in `discovery.k8s.io/v1`
+        // use autodetection even if explicitly set to true, to avoid misconfiguration on clusters that do not support EndpointSlices
+        return Uni.createFrom().completionStage(
+                vertx.<Boolean> executeBlocking(
+                        () -> client.getApiGroups().getGroups().stream()
+                                .anyMatch(g -> DISCOVERY_K8S_API.equals(g.getName())),
+                        false)
+                        .toCompletionStage())
+                .map(apiAvailable -> {
+                    if (!apiAvailable) {
+                        return false;
+                    }
+                    LOGGER.info("EndpointSlice discovery is enabled (experimental)");
+                    return true;
+                });
     }
 
     private void configureEndpointsInformer() {
         configureInformer(
-                ignore -> client.endpoints().inAnyNamespace(),
+                () -> client.endpoints().inAnyNamespace(),
                 ns -> client.endpoints().inNamespace(ns),
                 Endpoints.class);
     }
 
     private void configureSlicesInformer() {
         configureInformer(
-                ignore -> client.discovery().v1().endpointSlices().inAnyNamespace(),
+                () -> client.discovery().v1().endpointSlices().inAnyNamespace(),
                 ns -> client.discovery().v1().endpointSlices().inNamespace(ns),
                 EndpointSlice.class);
     }
 
+    private void configureServicesInformer() {
+        configureInformer(
+                () -> client.services().inAnyNamespace(),
+                ns -> client.services().inNamespace(ns),
+                Service.class);
+    }
+
+    /**
+     * Sets up a Kubernetes informer that invalidates the cache on resource changes.
+     * Used for {@link Endpoints}, {@link EndpointSlice}, and {@link Service} resources.
+     * The {@code ? extends Resource<T>} bounds are needed because fabric8 resource operations
+     * use different {@link Resource} subtypes (e.g. {@code ServiceResource<Service>}).
+     *
+     * @param <T> the Kubernetes resource type
+     * @param opAllNamespaces supplier for the all-namespaces operation
+     * @param opNamespace supplier for a single-namespace operation
+     * @param type the resource class, used for log messages
+     */
     private <T> void configureInformer(
-            Function<Boolean, AnyNamespaceOperation<T, ?, Resource<T>>> opAllNamespaces,
-            Function<String, AnyNamespaceOperation<T, ?, Resource<T>>> opNamespace,
+            Supplier<? extends AnyNamespaceOperation<T, ?, ? extends Resource<T>>> opAllNamespaces,
+            Function<String, ? extends AnyNamespaceOperation<T, ?, ? extends Resource<T>>> opNamespace,
             Class<T> type) {
-        AnyNamespaceOperation<T, ?, Resource<T>> op;
+        AnyNamespaceOperation<T, ?, ? extends Resource<T>> op;
         if (allNamespaces) {
-            op = opAllNamespaces.apply(true);
+            op = opAllNamespaces.get();
         } else {
             op = opNamespace.apply(namespace);
         }
@@ -214,83 +241,128 @@ public class KubernetesServiceDiscovery extends CachingServiceDiscovery {
 
     @Override
     public Uni<List<ServiceInstance>> fetchNewServiceInstances(List<ServiceInstance> previousInstances) {
-        if (shouldUseEndpointSlices()) {
-            Uni<List<EndpointSlice>> endpointSlices = fetchServiceEndpointSlice();
-            return endpointSlices.onItem().transform(slices -> fromSlicesToStorkServiceInstances(slices, previousInstances))
-                    .invoke(() -> invalidated.set(false));
-        } else {
-            Uni<Map<Endpoints, List<Pod>>> endpointsUni = fetchServiceEnpoints();
-            return endpointsUni.onItem()
-                    .transform(endpoints -> fromEndpointsToStorkServiceInstances(endpoints, previousInstances))
-                    .invoke(() -> invalidated.set(false));
+        if (useClusterIp) {
+            return configureInformerOnce(this::configureServicesInformer)
+                    .chain(configured -> fetchServiceClusterIp().onItem()
+                            .transform(clusterIps -> fromClusterIpServicesToStorkServiceInstances(clusterIps,
+                                    previousInstances))
+                            .invoke(() -> invalidated.set(!configured)));
         }
-
+        return useEndpointSlicesEnabledUni.flatMap(useSlices -> {
+            Runnable configurator = useSlices ? this::configureSlicesInformer : this::configureEndpointsInformer;
+            return configureInformerOnce(configurator)
+                    .chain(configured -> {
+                        Uni<List<ServiceInstance>> fetch;
+                        if (useSlices) {
+                            fetch = fetchServiceEndpointSlice().onItem()
+                                    .transform(slices -> fromSlicesToStorkServiceInstances(slices, previousInstances));
+                        } else {
+                            fetch = fetchServiceEndpoints().onItem()
+                                    .transform(endpoints -> fromEndpointsToStorkServiceInstances(endpoints,
+                                            previousInstances));
+                        }
+                        return fetch.invoke(() -> invalidated.set(!configured));
+                    });
+        });
     }
 
-    private Uni<Map<Endpoints, List<Pod>>> fetchServiceEnpoints() {
-        return Uni.createFrom().emitter(
-                emitter -> {
-                    vertx.executeBlocking(() -> {
-                        final Map<Endpoints, List<Pod>> items;
+    private Uni<Boolean> configureInformerOnce(Runnable configurator) {
+        if (informerConfigured.compareAndSet(false, true)) {
+            return executeOnWorkerThread(configurator)
+                    .replaceWith(true)
+                    .onFailure().invoke(th -> {
+                        LOGGER.warn("Failed to configure informer", th);
+                        informerConfigured.set(false);
+                        invalidated.set(true);
+                    })
+                    .onFailure().recoverWithItem(false);
+        }
+        return Uni.createFrom().item(true);
+    }
 
-                        if (allNamespaces) {
-                            List<Endpoints> endpointsList = client.endpoints().inAnyNamespace()
-                                    .withField(METADATA_NAME, application).list()
-                                    .getItems();
-                            items = gatherBackendPodsInAnyNamespace(endpointsList);
-                        } else {
-                            List<Endpoints> endpointsList = client.endpoints().inNamespace(namespace)
-                                    .withField(METADATA_NAME, application)
-                                    .list()
-                                    .getItems();
-                            items = gatherBackendPodsInNamespace(endpointsList);
-                        }
-                        return items;
-                    }).onComplete(result -> {
-                        if (result.succeeded()) {
-                            Map<Endpoints, List<Pod>> endpoints = result.result();
-                            emitter.complete(endpoints);
-                        } else {
-                            LOGGER.errorf("Unable to retrieve the endpoint from the %s service", application,
-                                    result.cause());
-                            emitter.fail(result.cause());
-                        }
-                    });
-                });
+    private Uni<Void> executeOnWorkerThread(Runnable runnable) {
+        return executeOnWorkerThread(() -> {
+            runnable.run();
+            return null;
+        }).replaceWithVoid();
+    }
+
+    private <T> Uni<T> executeOnWorkerThread(Supplier<T> supplier) {
+        return Uni.createFrom().completionStage(
+                vertx.<T> executeBlocking(supplier::get, false).toCompletionStage())
+                .onFailure().invoke(th -> LOGGER.error("Unable to retrieve resources from the {} service",
+                        application, th));
+    }
+
+    private Uni<Map<Endpoints, List<Pod>>> fetchServiceEndpoints() {
+        return executeOnWorkerThread(() -> {
+            List<Endpoints> endpointsList = allNamespaces
+                    ? client.endpoints().inAnyNamespace().withField(METADATA_NAME, application).list().getItems()
+                    : client.endpoints().inNamespace(namespace).withField(METADATA_NAME, application).list().getItems();
+            return gatherBackendPods(endpointsList);
+        });
     }
 
     private Uni<List<EndpointSlice>> fetchServiceEndpointSlice() {
-        return Uni.createFrom().emitter(
-                emitter -> {
-                    vertx.executeBlocking(() -> {
-                        List<EndpointSlice> items = new ArrayList<>();
+        return executeOnWorkerThread(() -> {
+            if (allNamespaces) {
+                return client.discovery().v1().endpointSlices()
+                        .inAnyNamespace()
+                        .withLabel(SERVICE_SELECTOR, application)
+                        .list().getItems();
+            } else {
+                return client.discovery().v1().endpointSlices().inNamespace(namespace)
+                        .withLabel(SERVICE_SELECTOR, application)
+                        .list().getItems();
+            }
+        });
+    }
 
-                        if (allNamespaces) {
-                            List<EndpointSlice> endpointSlices = client.discovery().v1().endpointSlices()
-                                    .inNamespace(namespace)
-                                    .withLabel(SERVICE_SELECTOR, application)
-                                    .list().getItems();
-                            items.addAll(endpointSlices);
+    private Uni<List<Service>> fetchServiceClusterIp() {
+        return executeOnWorkerThread(() -> {
+            if (allNamespaces) {
+                return client.services().inAnyNamespace()
+                        .withField(METADATA_NAME, application).list().getItems();
+            } else {
+                Service svc = client.services()
+                        .inNamespace(namespace).withName(application).get();
+                return svc != null ? List.of(svc) : Collections.emptyList();
+            }
+        });
+    }
 
-                        } else {
-                            List<EndpointSlice> endpointSlices = client.discovery().v1().endpointSlices().inNamespace(namespace)
-                                    .withLabel(SERVICE_SELECTOR, application)
-                                    .list()
-                                    .getItems();
-                            items.addAll(endpointSlices);
-                        }
-                        return items;
-                    }).onComplete(result -> {
-                        if (result.succeeded()) {
-                            List<EndpointSlice> endpointSlices = result.result();
-                            emitter.complete(endpointSlices);
-                        } else {
-                            LOGGER.errorf("Unable to retrieve the endpoint from the %s service", application,
-                                    result.cause());
-                            emitter.fail(result.cause());
-                        }
-                    });
-                });
+    private List<ServiceInstance> fromClusterIpServicesToStorkServiceInstances(List<Service> clusterIpServices,
+            List<ServiceInstance> previousInstances) {
+        List<ServiceInstance> serviceInstances = new ArrayList<>();
+        for (Service instance : clusterIpServices) {
+            List<ServicePort> servicePorts = instance.getSpec().getPorts();
+            if (servicePorts == null || servicePorts.isEmpty()) {
+                LOGGER.warnf("Skipping service '%s' in namespace '%s': no ports defined",
+                        application, instance.getMetadata().getNamespace());
+                continue;
+            }
+            ResolvedPort resolved = resolvePort(servicePorts,
+                    ServicePort::getName, ServicePort::getPort, ServicePort::getProtocol);
+            if (resolved == null) {
+                LOGGER.warnf("Skipping service '%s' in namespace '%s': no matching port found for port-name '%s'",
+                        application, instance.getMetadata().getNamespace(), portName);
+                continue;
+            }
+
+            String clusterIp = instance.getSpec().getClusterIP();
+            if (clusterIp == null || "None".equals(clusterIp)) {
+                LOGGER.warnf("Skipping headless service '%s' in namespace '%s'",
+                        application, instance.getMetadata().getNamespace());
+                continue;
+            }
+            Map<String, String> labels = instance.getMetadata().getLabels() != null
+                    ? new HashMap<>(instance.getMetadata().getLabels())
+                    : new HashMap<>();
+            serviceInstances.add(findOrCreateServiceInstance(previousInstances,
+                    clusterIp, resolved.port(), labels, instance.getMetadata().getNamespace(), resolved.protocol()));
+
+        }
+        return serviceInstances;
     }
 
     private List<ServiceInstance> fromSlicesToStorkServiceInstances(List<EndpointSlice> endpointSlices,
@@ -302,6 +374,9 @@ public class KubernetesServiceDiscovery extends CachingServiceDiscovery {
                     ? slice.getMetadata().getLabels()
                     : Collections.emptyMap());
             List<io.fabric8.kubernetes.api.model.discovery.v1.EndpointPort> ports = slice.getPorts();
+            if (ports == null || ports.isEmpty()) {
+                continue;
+            }
             for (Endpoint endpoint : slice.getEndpoints()) {
 
                 if (endpoint.getConditions() != null
@@ -311,19 +386,12 @@ public class KubernetesServiceDiscovery extends CachingServiceDiscovery {
 
                 for (String address : endpoint.getAddresses()) {
                     for (io.fabric8.kubernetes.api.model.discovery.v1.EndpointPort port : ports) {
-
-                        ServiceInstance matching = ServiceInstanceUtils.findMatching(previousInstances, address,
-                                port.getPort());
-                        if (matching != null) {
-                            serviceInstances.add(matching);
-                        } else {
-                            Metadata<KubernetesMetadataKey> k8sMetadata = Metadata.of(KubernetesMetadataKey.class);
-                            DefaultServiceInstance serviceInstance = new DefaultServiceInstance(ServiceInstanceIds.next(),
-                                    address, port.getPort(), Optional.empty(), secure,
-                                    labels,
-                                    k8sMetadata.with(META_K8S_SERVICE_ID, address).with(META_K8S_NAMESPACE, namespace));
-                            serviceInstances.add(serviceInstance);
+                        if (portName != null && !portName.equals(port.getName())) {
+                            continue;
                         }
+
+                        serviceInstances.add(findOrCreateServiceInstance(previousInstances,
+                                address, port.getPort(), labels, slice.getMetadata().getNamespace(), port.getProtocol()));
                     }
                 }
             }
@@ -331,30 +399,18 @@ public class KubernetesServiceDiscovery extends CachingServiceDiscovery {
         return serviceInstances;
     }
 
-    private Map<Endpoints, List<Pod>> gatherBackendPodsInNamespace(List<Endpoints> endpointsList) {
+    private Map<Endpoints, List<Pod>> gatherBackendPods(List<Endpoints> endpointsList) {
         Map<Endpoints, List<Pod>> items = new HashMap<>();
         for (Endpoints endpoint : endpointsList) {
             List<String> podNames = endpoint.getSubsets().stream()
                     .flatMap(endpointSubset -> endpointSubset.getAddresses().stream())
-                    .map(address -> address.getTargetRef().getName()).toList();
+                    .map(address -> address.getTargetRef().getName()).collect(Collectors.toList());
             List<Pod> backendPods = podNames.stream()
-                    .map(name -> client.pods().inNamespace(namespace).withName(name))
-                    .map(Gettable::get).collect(Collectors.toList());
-            items.put(endpoint, backendPods);
-        }
-        return items;
-    }
-
-    private Map<Endpoints, List<Pod>> gatherBackendPodsInAnyNamespace(List<Endpoints> endpointsList) {
-        Map<Endpoints, List<Pod>> items = new HashMap<>();
-        for (Endpoints endpoint : endpointsList) {
-            List<Pod> backendPods = new ArrayList<>();
-            List<String> podNames = endpoint.getSubsets().stream()
-                    .flatMap(endpointSubset -> endpointSubset.getAddresses().stream())
-                    .map(address -> address.getTargetRef().getName()).toList();
-            podNames.forEach(podName -> backendPods
-                    .addAll(client.pods().inAnyNamespace().withField(METADATA_NAME, podName).list()
-                            .getItems()));
+                    .flatMap(name -> allNamespaces
+                            ? client.pods().inAnyNamespace().withField(METADATA_NAME, name).list().getItems().stream()
+                            : Stream.of(client.pods().inNamespace(namespace).withName(name).get()))
+                    .filter(pod -> pod != null)
+                    .collect(Collectors.toList());
             items.put(endpoint, backendPods);
         }
         return items;
@@ -374,53 +430,71 @@ public class KubernetesServiceDiscovery extends CachingServiceDiscovery {
                         hostname = endpointAddress.getHostname();
                     }
                     List<EndpointPort> endpointPorts = subset.getPorts();
-                    Integer port = 0;
-                    String protocol = "";
-                    if (endpointPorts.size() == 1) {
-                        port = endpointPorts.get(0).getPort();
-                        protocol = endpointPorts.get(0).getProtocol();
-                    } else {
-                        for (EndpointPort endpointPort : endpointPorts) {
-                            // return first endpoint port or the matching one with the provided port name.
-                            if (portName == null || portName.equals(endpointPort.getName())) {
-                                port = endpointPort.getPort();
-                                protocol = endpointPort.getProtocol();
-                                break;
-                            }
-                        }
+                    if (endpointPorts == null || endpointPorts.isEmpty()) {
+                        continue;
+                    }
+                    ResolvedPort resolved = resolvePort(endpointPorts,
+                            EndpointPort::getName, EndpointPort::getPort, EndpointPort::getProtocol);
+                    if (resolved == null) {
+                        LOGGER.warnf("Skipping endpoint for service '%s': no matching port found for port-name '%s'",
+                                application, portName);
+                        continue;
                     }
 
-                    ServiceInstance matching = ServiceInstanceUtils.findMatching(previousInstances, hostname, port);
-                    if (matching != null) {
-                        serviceInstances.add(matching);
-                    } else {
-                        Map<String, String> labels = new HashMap<>(endPoints.getMetadata().getLabels() != null
-                                ? endPoints.getMetadata().getLabels()
-                                : Collections.emptyMap());
-                        Optional<Pod> maybePod = pods.stream().filter(pod -> pod.getMetadata().getName().equals(podName))
-                                .findFirst();
-                        String podNamespace = namespace;
-                        if (maybePod.isPresent()) {
-                            Pod pod = maybePod.get();
-                            ObjectMeta metadata = pod.getMetadata();
-                            podNamespace = metadata.getNamespace();
-                            Map<String, String> podLabels = metadata.getLabels();
-                            for (Map.Entry<String, String> label : podLabels.entrySet()) {
-                                labels.putIfAbsent(label.getKey(), label.getValue());
-                            }
+                    Map<String, String> labels = new HashMap<>(endPoints.getMetadata().getLabels() != null
+                            ? endPoints.getMetadata().getLabels()
+                            : Collections.emptyMap());
+                    Optional<Pod> maybePod = pods.stream().filter(pod -> pod.getMetadata().getName().equals(podName))
+                            .findFirst();
+                    String podNamespace = namespace;
+                    if (maybePod.isPresent()) {
+                        Pod pod = maybePod.get();
+                        ObjectMeta metadata = pod.getMetadata();
+                        podNamespace = metadata.getNamespace();
+                        Map<String, String> podLabels = metadata.getLabels();
+                        for (Map.Entry<String, String> label : podLabels.entrySet()) {
+                            labels.putIfAbsent(label.getKey(), label.getValue());
                         }
-                        Metadata<KubernetesMetadataKey> k8sMetadata = Metadata.of(KubernetesMetadataKey.class);
-                        serviceInstances.add(
-                                new DefaultServiceInstance(ServiceInstanceIds.next(), hostname, port, Optional.empty(), secure,
-                                        labels,
-                                        k8sMetadata.with(META_K8S_SERVICE_ID, hostname).with(META_K8S_NAMESPACE, podNamespace)
-                                                .with(META_K8S_PORT_PROTOCOL, protocol)));
                     }
+                    serviceInstances.add(findOrCreateServiceInstance(previousInstances,
+                            hostname, resolved.port(), labels, podNamespace, resolved.protocol()));
                 }
             }
 
         }
         return serviceInstances;
+    }
+
+    private record ResolvedPort(int port, String protocol) {
+    }
+
+    private <P> ResolvedPort resolvePort(List<P> ports,
+            Function<P, String> getName, Function<P, Integer> getPort, Function<P, String> getProtocol) {
+        if (ports.size() == 1) {
+            return new ResolvedPort(getPort.apply(ports.get(0)), getProtocol.apply(ports.get(0)));
+        }
+        for (P p : ports) {
+            if (portName == null || portName.equals(getName.apply(p))) {
+                return new ResolvedPort(getPort.apply(p), getProtocol.apply(p));
+            }
+        }
+        return null;
+    }
+
+    private ServiceInstance findOrCreateServiceInstance(List<ServiceInstance> previousInstances,
+            String host, int port, Map<String, String> labels, String instanceNamespace, String protocol) {
+        ServiceInstance matching = ServiceInstanceUtils.findMatching(previousInstances, host, port);
+        if (matching != null) {
+            return matching;
+        }
+        Metadata<KubernetesMetadataKey> k8sMetadata = Metadata.of(KubernetesMetadataKey.class)
+                .with(META_K8S_SERVICE_ID, host)
+                .with(META_K8S_NAMESPACE, instanceNamespace);
+        if (protocol != null && !protocol.isEmpty()) {
+            k8sMetadata = k8sMetadata.with(META_K8S_PORT_PROTOCOL, protocol);
+        }
+        return new DefaultServiceInstance(ServiceInstanceIds.next(),
+                host, port, Optional.empty(), secure, labels, k8sMetadata);
     }
 
     private static boolean isSecure(KubernetesConfiguration config) {
